fix for crash of datepicker layout on mobile browser

--- a/css/natural.ui.css
+++ b/css/natural.ui.css
@@ -384,6 +384,7 @@ div.datepicker_contents__ {
 	background-image: linear-gradient(to bottom, #c9c9c9 0%, #999999 100%);
 	background-color: #999999;
 	padding: 3px;
+	width: 316px;
 	font-size: 12px;
 }
 
